# squarehole

./: CHANGELOG.md  LICENSE  flake.nix  squarehole.cabal
src/Control/Monad/: SquareHole.hs
src/Data/: HSet.hs
src/Data/Type/: Function.hs  Map.hs  Semigroup.hs
src/Data/Type/Ord/: Instances.hs
