cabal-version:      3.0
name:               squarehole
version:            0.0.0.1
synopsis:           It goes in the square hole.
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zoe Zuser
maintainer:         zmzuser@gmail.com
copyright:          2024
category:           Control
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common language
    default-language: Haskell2010
    default-extensions:
      , BlockArguments
      , ConstraintKinds
      , DataKinds
      , DerivingStrategies
      , FlexibleContexts
      , FlexibleInstances
      , FunctionalDependencies
      , GADTs
      , GeneralizedNewtypeDeriving
      , ImportQualifiedPost
      , MultiParamTypeClasses
      , PolyKinds
      , ScopedTypeVariables
      , TypeApplications
      , TypeFamilies
      , TypeOperators
      , UnicodeSyntax
      , UndecidableInstances
      , RankNTypes
      , UndecidableSuperClasses
      , NoStarIsType

common common-deps
    build-depends:    base

common warnings
    ghc-options: -Wall

library
    import:           language, common-deps, warnings
    hs-source-dirs:   src
    exposed-modules:
      , Control.Monad.SquareHole
      , Data.HSet
      , Data.Type.Ord.Instances
      , Data.Type.Map
    build-depends:
      , ghc-prim
      , hashable
      , mtl
      , transformers
      , unordered-containers
    -- other-modules:

test-suite squarehole-test
    import:           language, common-deps, warnings
    hs-source-dirs:   test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    -- other-modules:
    build-depends:
        squarehole
